ImprovedButtons.css
/**
 * @name Improved Buttons
 * @author Krammeth
 * @description inspired by Discord's scrapped Refresh design
 * @version 1.1
*/

/* basically rewrite the entire scroller lmao */
._629e4c86564a4ee7-scroller {
  padding-right: 0 !important;

  &>.d125d22cdfd32cfe-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: flex-start;
    justify-content: center;

    /* reduce useless spacing */
    &>div[style="height: 12px;"]:not([class]) {
      height: 0 !important;
      width: 100%;

      /* check if there's only one button when boosts bar is not present */
      &+li:not([class]):has(+ ._629e4c86564a4ee7-sectionDivider) {
        width: 100%;
        margin-top: 15px;

        &>._2ea32c412048f708-wrapper>._2ea32c412048f708-basicChannelRowLink {
          padding: 5px 10px;

          &>._658442d9ffa4221c-content>._2ea32c412048f708-name {
            display: unset;
          }
        }
      }
    }

    /* fix top spacing when neither boosts bar nor banner are present */
    &>div[style="height: 0px;"]:not([class])+div[style="height: 12px;"]:not([class]) {

      &~li:not([class]),
      &~div:not([class]) {
        margin-top: 15px
      }
    }

    /* fix top spacing when both boosts bar and banner are present */
    &>div[style="height: 84px;"]:not([class])+div[style="height: 12px;"]+._0d0f9ddd12a3ace3-containerWithMargin {

      &~li:not([class]),
      &~div:not([class]) {
        margin-top: 15px;
      }
    }

    /* boosts bar */
    &>._0d0f9ddd12a3ace3-containerWithMargin {
      margin: 12px 8px 0px;
      width: 100%;

      /* check if there's only one button when boosts bar is present */
      &+li:not([class]):has(+ ._629e4c86564a4ee7-sectionDivider) {
        width: 100%;
        margin-top: 15px;

        &>._2ea32c412048f708-wrapper>._2ea32c412048f708-basicChannelRowLink {
          padding: 5px 10px;

          &>._658442d9ffa4221c-content>._2ea32c412048f708-name {
            display: unset;
          }
        }
      }
    }

    &>li:not([class]) {
      width: fit-content;

      &>._2ea32c412048f708-wrapper {
        margin: 0 5px;

        &>._2ea32c412048f708-basicChannelRowLink {
          padding: 5px;

          &>._658442d9ffa4221c-content>._2ea32c412048f708-name {
            display: none;
          }
        }
      }
    }

    &>div:not([class], div:nth-of-type(1), div:nth-of-type(2)) {
      width: 40px;

      &>li:not([class])>._2ea32c412048f708-wrapper {
        margin: 0 5px;

        &>._2ea32c412048f708-basicChannelRowLink {
          padding: 5px;

          &>._658442d9ffa4221c-content>._2ea32c412048f708-name {
            display: none;
          }
        }
      }
    }

    &>._629e4c86564a4ee7-sectionDivider {
      /* divider */
      width: 100%;
      margin: 15px 15px 3px;
    }

    /* reduce categories spacing */
    &>._29444ba32c7fbeab-containerDefault {
      margin: 12px 8px 0;
      padding: 0 10px;

      &>._29444ba32c7fbeab-wrapperCommon {
        padding: 0;
      }
    }

    /* fix channels */
    &>.c69b6db0641110f6-containerDefault {
      margin: 0 8px;

      &>._2ea32c412048f708-wrapper {
        margin: 0;

        &>._2ea32c412048f708-unread {
          left: -8.5px;
        }
      }

      &>div:not([class])>._2ea32c412048f708-wrapper {
        margin: 0;

        >._2ea32c412048f708-unread {
          left: -7px;
        }
      }
    }

    &>._5b40bdd67543ba35-container {
      margin: 0 8px 0 0;
    }

    /* fix categories and channels */
    &>._29444ba32c7fbeab-containerDefault,
    &>.c69b6db0641110f6-containerDefault,
    &>._5b40bdd67543ba35-container {
      width: 100%;
      max-width: calc(240px - 16px);
    }
  }
}

